2017-02-15  Ulf Hermann  <ulf.hermann@qt.io>

	* linux-kernel-modules.c: Include system.h.

2017-02-15  Ulf Hermann  <ulf.hermann@qt.io>

	* linux-kernel-modules.c: Use sysconf(_SC_PAGESIZE) to get page size.
	* linux-proc-maps.c: Likewise.

2016-12-29  Luiz Angelo Daros de Luca  <luizluca@gmail.com>

	* dwfl_build_id_find_elf.c: Include system.h.
	* dwfl_module_getdwarf.c: Likewise.
	* libdwfl_crc32_file.c: Don't define LIB_SYSTEM_H.

2016-11-23  Mark Wielaard  <mjw@redhat.com>

	* linux-kernel-modules.c: Only include fts.h early if BAD_FTS is
	defined.

2016-10-11  Akihiko Odaki  <akihiko.odaki.4i@stu.hosei.ac.jp>

	* core-file.c: Remove sys/param.h.
	* dwfl_segment_report_module.c: Likewise. Add system.h include.
	(MAX): Remove definition.
	* frame_unwind.c: Add system.h include.
	(MAX): Remove definition.
	* linux-core-attach.c (MIN): Remove definition.
	* linux-pid-attach.c (MAX): Likewise.

2016-08-12  Mark Wielaard  <mjw@redhat.com>

	* link_map.c (dwfl_link_map_report): Fix assert, set in.d_size.

2016-04-14  Mark Wielaard  <mjw@redhat.com>

	* dwfl_module_getsrc_file.c (dwfl_module_getsrc_file): Free match
	on invalid DWARF if we allocated it.

2016-04-14  Mark Wielaard  <mjw@redhat.com>

	* linux-proc-maps.c (proc_maps_report): Free last_file on bad file
	mapping.

2016-03-01  Steven Chamberlain  <steven@pyro.eu.org>

	* linux-pid-attach.c: Removed unused pid_thread_callbacks,
	pid_thread_detach, pid_detach, pid_set_initial_registers,
	pid_memory_read, pid_getthread, pid_next_thread in #ifndef
	__linux__ code.

2016-02-22  Ravi Bangoria <ravi.bangoria@linux.vnet.ibm.com>
	    Mark Wielaard  <mjw@redhat.com>

	* find-debuginfo.c (find_debuginfo_in_path): Remember whether
	debuglink_file is NULL. Try file basename (without .debug) ofr
	absolute and relative path if debug_file was NULL.
	* linux-kernel-modules.c (try_kernel_name): If try_debug is true call
	dwfl_standard_find_debuginfo with NULL debuglink_file, otherwise with
	basename of fname.
