@@ -1,3 +1,9 @@
+2017-03-24  Mark Wielaard  <mark@klomp.org>
+
+	* linux-core-attach.c (core_next_thread): If n_namesz == 0 then
+	the note name data is the empty string.
+	(dwfl_core_file_attach): Likewise.
+
 2017-02-15  Ulf Hermann  <ulf.hermann@qt.io>
 
 	* linux-kernel-modules.c: Include system.h.
